--- a/templates/partials/header.gohtml
+++ b/templates/partials/header.gohtml
@@ -1,7 +1,7 @@
 {{define "header"}}
 <header>
   <nav>
-    <a href="/"><h1>Byte Coin</h1></a>
+    <a href="/"><h1>바이트코인</h1></a>
     <ul>
       <li>
         <a href="/">Home</a>
